--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       font-family: 'Arial';
       margin-top: 200px;
       text-align: center;
-      color: black;
+      color: white;
     }
 
     #clock{
